--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,9 @@
 import Layout from '../layouts/Layout.astro';
 import List from "../components/top/list/List.astro"
 
-
-
 const meta = {
-	title:"トップページ",
-	description:"トップページのデスクリプション"
+	title:"top",
+	description:"top page のデスクリプション"
 }
 ---
 
