--- a/src/components/top/list/List.astro
+++ b/src/components/top/list/List.astro
@@ -1,51 +1,25 @@
 ---
-
-const items = [
-  {
-    link:"about",
-    title:"About",
-    description:"こちらは About Page へのリンクです"
-  }
-]
-
-
+import { items } from "../../posts/Posts"
 
 ---
   <div class="max-w-5xl w-full mx-auto">
       <ul class="grid grid-cols-3 gap-10">
-{
-  items.map((item)=>{
-return     <li>
-          <a href="/maru_school/takaya/transition/about/">
-            <div class="w-80">
-              <img class="w-full" transition:name="AboutImg" src="/maru_school/takaya/transition/kabi.png" alt="">
-              <h1 class="font-bold text-3xl">About</h1>
-              <p class="text-xl">こちらは About Page へのリンクです</p>
-            </div>
-          </a>
-    </li>
-    }
-  )
-}
-
-
-        <li>
-          <a href="/maru_school/takaya/transition/about/">
-            <div class="w-80">
-              <img class="w-full" transition:name="AboutImg" src="/maru_school/takaya/transition/kabi.png" alt="">
-              <h1 class="font-bold text-3xl">About</h1>
-              <p class="text-xl">こちらは About Page へのリンクです</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="/maru_school/takaya/transition/works/">
-            <div class="w-80">
-              <img class="w-full" transition:name="WorksImg" src="/maru_school/takaya/transition/kabi.png" alt="">
-              <h1 class="font-bold text-3xl">Works</h1>
-              <p class="text-xl">こちらは Works Page へのリンクです</p>
-            </div>
-          </a>
-        </li>
+        {
+          items.map((item)=>{
+                return (
+                  <li>
+                        <a href={`/maru_school/takaya/transition/${item.link}/`}>
+                          <div class="w-80" >
+                              <img transition:name={`${item.title}Img`} src="/maru_school/takaya/transition/kabi.png" alt="">
+                           <div class="p-3">
+                            <h1 class="font-bold text-xl">{item.title}</h1>
+                            <p class="text-md">{item.description}</p></div>
+                          </div>
+                        </a>
+                  </li>
+                )
+              }
+          )
+        }
       </ul>
     </div>
