astroテンプレート

--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -2,10 +2,7 @@
 import { items } from "../posts/Posts"
 ---
 <header class="sticky top-0 left-0 z-20 h-16 w-full flex items-center px-9">
-  <div class="flex justify-between w-full">
-  <p>
-    Transition
-  </p>
+  <div class="flex justify-end w-full">
     <nav>
       <ul class="flex items-center gap-5">
         <li>
