--- a/src/components/top/list/List.astro
+++ b/src/components/top/list/List.astro
@@ -5,20 +5,18 @@ import { items } from "../../posts/Posts"
   <div class="max-w-5xl w-full mx-auto">
       <ul class="grid grid-cols-3 gap-10">
         {
-          items.map((item)=>{
-                return (
-                  <li>
-                        <a href={`/maru_school/takaya/transition/${item.link}/`}>
-                          <div class="w-80" >
-                              <img transition:name={`${item.title}Img`} src="/maru_school/takaya/transition/kabi.png" alt="">
-                           <div class="p-3">
-                            <h1 class="font-bold text-xl">{item.title}</h1>
-                            <p class="text-md">{item.description}</p></div>
-                          </div>
-                        </a>
-                  </li>
-                )
-              }
+          items.map((item)=>(
+          <li>
+            <a href={`/maru_school/takaya/transition/${item.link}/`}>
+              <div class="w-80" >
+                <img transition:name={`${item.title}Img`} src="/maru_school/takaya/transition/kabi.png" alt="">
+                   <div class="p-3">
+                      <h1 class="font-bold text-xl">{item.title}</h1>
+                      <p class="text-md">{item.description}</p></div>
+                   </div>
+              </a>
+          </li>
+            )
           )
         }
       </ul>
